crates/oxc_language_server/src/snapshots/fixtures_linter_invalid_syntax@debugger.ts_invalid.vue.snap
---
source: crates/oxc_language_server/src/tester.rs
---
########## 
file: fixtures/linter/invalid_syntax/debugger.ts
----------

code: ""
code_description.href: "None"
message: "Unexpected token"
range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/invalid_syntax/debugger.ts"
related_information[0].location.range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
severity: Some(Error)
source: Some("oxc")
tags: None
fixed: None

########## 
file: fixtures/linter/invalid_syntax/invalid.vue
----------

code: ""
code_description.href: "None"
message: "Missing initializer in const declaration"
range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/invalid_syntax/invalid.vue"
related_information[0].location.range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
severity: Some(Error)
source: Some("oxc")
tags: None
fixed: None
