crates/oxc_language_server/src/snapshots/fixtures_linter_svelte@debugger.svelte.snap
---
source: crates/oxc_language_server/src/tester.rs
input_file: crates/oxc_language_server/fixtures/linter/svelte/debugger.svelte
---
code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/svelte/debugger.svelte"
related_information[0].location.range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
fixed: Some(FixedContent { message: Some("Remove the debugger statement"), code: "", range: Range { start: Position { line: 0, character: 2 }, end: Position { line: 1, character: 2 } } })
