crates/oxc_language_server/src/snapshots/fixtures_linter_vue@debugger.vue.snap
---
source: crates/oxc_language_server/src/tester.rs
input_file: crates/oxc_language_server/fixtures/linter/vue/debugger.vue
---
code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 5, character: 4 }, end: Position { line: 5, character: 12 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 5, character: 4 }, end: Position { line: 5, character: 12 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
fixed: Some(FixedContent { message: Some("Remove the debugger statement"), code: "", range: Range { start: Position { line: 0, character: 5 }, end: Position { line: 1, character: 2 } } })


code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 10, character: 4 }, end: Position { line: 10, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 10, character: 4 }, end: Position { line: 10, character: 13 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
fixed: Some(FixedContent { message: Some("Remove the debugger statement"), code: "", range: Range { start: Position { line: 2, character: 1 }, end: Position { line: 2, character: 10 } } })
